--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a forms tag where our inputs will be nested -->
+    <br action="#" method="post">
+      <label for="fullname">Full name</label>
+      <input type="text" placeholder="Enter Name"><br>
+      <label for="email">Email</label>
+      <input type="text" placeholder="Enter Email"> <br>
+      <label for="telephoneNumber">Telephone Number</label>
+      <input type="tel" placeholder="Enter Email"><br>
+      <label for="message">Note your message</label>
+      <textarea name="message" id="message" placeholder="Enter Message" cols="30" rows="10"></textarea><br>
+      <label for="time">Choose a good time suitable for you</label>
+      <input type="checkbox" name="6:00" value="6:00">6:00PM <br />
+      <input type="checkbox" name="7:00" value="7:00">7:00PM <br />
+      <input type="checkbox" name="8:00" value="8:00">8:00PM <br />
+      <input type="checkbox" name="9:00" value="9:00">9:00PM <br />
+      <input type="submit" name="submit" id="submit">
+    </form>
 
 
       <!-- Add a label for 'fullname'-->
